2005-12-21  Andrew Cagney  <cagney@redhat.com>

	* TestExec.java, TestGoAndGo.java, TestHostGet.java,
	TestI386Modify.java, TestI386Regs.java, TestLib.java,
	TestModify.java, TestPaused.java, TestProcGet.java,
	TestRefresh.java, TestRun.java, TestStep.java, TestStop.java,
	TestStopAndGo.java, TestStopAndStop.java, TestSyscall.java,
	TestSyscall2.java, TestSyscallInterrupt.java,
	TestSyscallOpen.java, TestTaskClonedObserver.java,
	TestTaskObserverBlocked.java, TestTasksObserver.java,
	TestUnpaused.java: Clean up assert text messages so that they
	state what is being checked, not the expected value or why.

2005-12-13  Andrew Cagney  <cagney@redhat.com>

	* Proc.java: Rename .observableTaskAdded to
	.observableTaskAddedXXX.

	* TestUnpaused.java: Eliminate use of Proc .observableTaskAdded.
	* TestSyscallOpen.java: Ditto.
	* TestSyscall.java: Ditto.
	* TestSyscall2.java: Ditto.
	* TestStop.java: Ditto.
	* TestStopAndStop.java: Ditto.
	* TestStep.java: Ditto.
	* TestPaused.java: Ditto.

	* Proc.java: Restore .observableTaskRemoved, renamed to
	.observableTaskRemovedXXX.  Revert 2005-12-12 change.

2005-12-12  Andrew Cagney  <cagney@redhat.com>

	* TestI386Modify.java: Eliminate use of .observableTaskAdded.
	* TestI386Regs.java: Ditto.
	* TestModify.java: Ditto.

	* TestStopAndGo.java: Eliminate use of .observableTaskAdded.

	* Proc.java: Delete .observableTaskRemoved.

2005-12-04  Sami Wagiaalla  <swagiaal@redhat.com>
	    Andrew Cagney  <cagney@redhat.com>

	* ProcState.java: In .unattached state, handle a request to add a
	ProcObserver.Tasks.
	* TestTasksObserver.java: New file.
	* Proc.java: Add .requestAddTasksObserver
	* ProcObserver.java: New file.

2005-12-04  Andrew Cagney  <cagney@redhat.com>

	* TestGoAndGo.java: Use Host.observableTaskAdded.

	* TestLib.java: In TaskCounter, directly add to Host
	.observableTaskAdded.
	
	* TestLib.java: In AutoAddTaskObserverBase, directly add to Host
	.observableTaskAdded.